--- a/dubbo-metrics/dubbo-metrics-export-otlp/pom.xml
+++ b/dubbo-metrics/dubbo-metrics-export-otlp/pom.xml
@@ -14,41 +14,45 @@
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-  -->
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache.dubbo</groupId>
-    <artifactId>dubbo-parent</artifactId>
+    <artifactId>dubbo-metrics</artifactId>
     <version>${revision}</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
-  <artifactId>dubbo-metrics</artifactId>
-  <packaging>pom</packaging>
+  <artifactId>dubbo-metrics-export-otlp</artifactId>
+  <packaging>jar</packaging>
   <name>${project.artifactId}</name>
-  <description>The metrics module of dubbo project</description>
-  <modules>
-    <module>dubbo-metrics-annotation</module>
-    <module>dubbo-metrics-api</module>
-    <module>dubbo-metrics-default</module>
-    <module>dubbo-metrics-starter</module>
-    <module>dubbo-metrics-registry</module>
-    <module>dubbo-metrics-metadata</module>
-    <module>dubbo-metrics-prometheus</module>
-<!--    <module>dubbo-metrics-export-otlp</module>-->
-    <module>dubbo-metrics-config-center</module>
-    <module>dubbo-tracing</module>
-    <module>dubbo-metrics-netty</module>
-  </modules>
+  <description>The oltp metrics module of dubbo project</description>
   <properties>
     <skip_maven_deploy>false</skip_maven_deploy>
   </properties>
-
   <dependencies>
     <dependency>
       <groupId>org.apache.dubbo</groupId>
-      <artifactId>dubbo-test-check</artifactId>
+      <artifactId>dubbo-common</artifactId>
       <version>${project.parent.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.dubbo</groupId>
+      <artifactId>dubbo-metrics-default</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-registry-otlp</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-slf4j-impl</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
